# stm32-board

./: .gitignore  config.ini  config_loader.py  config_options.py  csv_logger.py  csv_recorder.py  logger.py  my_Rosmaster.py  protocol.py  queue_logger.py  queue_recorder.py  tcp.py  tcp_client_pi.py  tcp_local_client.py  tcp_server_pi.py  udp_client_pi.py  udp_server_pi.py  udp_test_client.py
cmd/: status.sh  stop.sh
cpp_controller/: CMakeLists.txt  run.sh
cpp_controller/algorithm/: algorithm2.c  algorithm2.h  algorithm2_types.h  buildInfo.mat  linuxTimeLogger.c  linuxTimeLogger.h  rtw_proj.tmw  rtwtypes.h
cpp_controller/include/: controller.hpp  packets.hpp  udp_socket.hpp
cpp_controller/src/: controller.cpp  main.cpp  packets.cpp  udp_socket.cpp
cpp_gateway/: CMakeLists.txt  client.sh  gateway.sh
cpp_gateway/app/: decode_gateway_log.cpp  demo.cpp  demo_logger.cpp  demo_recorder.cpp  gateway_main.cpp  helpper.cpp  helpper.hpp  tcp_client.cpp  tcp_gateway.cpp  udp_client.cpp  udp_gateway.cpp
cpp_gateway/app/workers/: controller_worker.cpp  controller_worker.hpp  log_worker.cpp  log_worker.hpp  shared_state.hpp  tcp_worker.cpp  tcp_worker.hpp  usb_worker.cpp  usb_worker.hpp
cpp_gateway/deploy/: README.md
cpp_gateway/deploy/systemd/: gateway.service
cpp_gateway/docs/: protocol.md
cpp_gateway/include/connection/: framed.hpp  packets.hpp  serial_port.hpp  tcp_socket.hpp  udp_packets.hpp  udp_socket.hpp  wire_codec.hpp
cpp_gateway/include/core/: basic.hpp
cpp_gateway/include/gateway/: commands.hpp  enums.hpp  latest_value.hpp  runtime_config.hpp  spsc_overwrite_ring.hpp  stop_flag.hpp
cpp_gateway/include/rosmaster/: basic.hpp  protocol.hpp  rosmaster.hpp
cpp_gateway/include/utils/: binary_log.hpp  cast.hpp  csv_recorder.hpp  logger.hpp  rate_limiter.hpp  rotating_binary_log.hpp  signal_handler.hpp  thread_sched.hpp  timestamp.h
cpp_gateway/legacy/: demo.cpp  demo_recorder.cpp  tcp_gateway.cpp  udp_client.cpp  udp_gateway.cpp  udp_socket.hpp
cpp_gateway/script/: client1.sh  client2.sh  client3.sh  compile.sh  decode.sh  decode_last.sh  gateway.sh
cpp_gateway/src/connection/: packets.cpp  serial_port.cpp  tcp_socket.cpp  udp_packets.cpp  udp_socket.cpp  wire_codec.cpp
cpp_gateway/src/core/: basic.cpp
cpp_gateway/src/rosmaster/: basic.cpp  rosmaster.cpp
cpp_gateway/src/utils/: binary_log.cpp  csv_recorder.cpp  logger.cpp  rotating_binary_log.cpp  timestamp.cpp
cpp_gateway/tests/: fake_serial.hpp  test_framed.cpp  test_wire_codec.cpp
gateway/: Rosmaster_Lib.py  config.ini  csv_recorder.py  my_Rosmaster.py  protocol.py  queue_recorder.py  tcp_client_pi.py  udp.py  udp_client_pi.py  yahboom_udp_gateway.py
gateway/other/: pi_logger.py  sender.py  sender_cmd.py  tcp_client_pi.py  tcp_local_client.py  tcp_server_pi.py  tcp_test_client.py
other/: tcp_server_pi.py  tcp_test_client.py  udp.py
